crates/strider-analyze/tests/snapshots/v2__x86__complex__dispatch_on_flag.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nEDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x401150:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "15" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "11" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v16" [color="#888888", style=dashed];
  "v16" -> "15" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v17" [color="#888888", style=dashed];
  "v17" -> "15" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v18" [color="#888888", style=dashed];
  "v18" -> "15" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v19" [color="#888888", style=dashed];
  "v19" -> "15" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "14" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "14" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "22" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x401280:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "6" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0xc:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
